syntax = "proto3";
package layer.bridge;

import "gogoproto/gogo.proto";
import "layer/bridge/params.proto";

option go_package = "github.com/tellor-io/layer/x/bridge/types";

// GenesisState defines the bridge module's genesis state.
message GenesisState {
  Params params = 1 [(gogoproto.nullable) = false];
  uint64 snapshot_limit = 2;
}
